--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "watch:sass": "sass --no-source-map --watch src/sass/main.scss:src/main.css",
+    "build:sass": "sass --no-source-map src/sass/main.scss:src/main.css"
   },
   "dependencies": {
     "axios": "^1.6.7",
